--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
 		"@babel/preset-env": "^7.4.3",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.5",
+		"css-hot-loader": "^1.4.4",
+		"css-loader": "^2.1.1",
 		"electron": "^5.0.1",
 		"eslint-config-airbnb-standard": "^3.0.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.6.0",
+		"node-sass": "^4.12.0",
 		"react-hot-loader": "^4.8.4",
+		"sass-loader": "^7.1.0",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.1",
 		"webpack-dev-server": "^3.3.1"
