Basic Context API

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "no-tabs": 0,
     "indent": [2, "tab"],
     "react/jsx-indent": [2, "tab"],
+    "react/jsx-indent-props": [2, "tab"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
   "env": {
