--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"node-sass": "^4.12.0",
 		"react-hot-loader": "^4.8.4",
 		"sass-loader": "^7.1.0",
+		"url-loader": "^1.1.2",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.1",
 		"webpack-dev-server": "^3.3.1"
