--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
 	"presets": [
-		"@babel/preset-env",
+		[
+			"@babel/preset-env",
+			{
+				"targets": {
+					"electron": "5.0.1"
+				}
+			}
+		],
 		"@babel/preset-react"
 	],
 	"plugins": [
