--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "main.js",
 	"scripts": {
 		"start": "webpack-dev-server --config ./webpack.config.js --mode development",
-		"electron": "electron .",
+		"electron": "webpack --config ./webpack.config.js && electron .",
 		"test": "echo \"No test specified\" && exit 0"
 	},
 	"keywords": [],
@@ -19,7 +19,6 @@
 		"babel-loader": "^8.0.5",
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
-		"electron": "^5.0.1",
 		"eslint-config-airbnb-standard": "^3.0.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
@@ -33,9 +32,12 @@
 		"webpack-dev-server": "^3.3.1"
 	},
 	"dependencies": {
+		"electron": "^5.0.1",
+		"fsevents": "^2.0.7",
 		"howler": "^2.1.2",
 		"rc-slider": "^8.6.11",
 		"react": "^16.8.6",
-		"react-dom": "^16.8.6"
+		"react-dom": "^16.8.6",
+		"react-split-pane": "^0.1.87"
 	}
 }
