--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 	"dependencies": {
 		"electron": "^5.0.1",
 		"fsevents": "^2.0.7",
+		"graceful-fs": "^4.1.15",
 		"howler": "^2.1.2",
+		"node-id3": "^0.1.7",
 		"rc-slider": "^8.6.11",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
