--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
 		"eslint-config-airbnb-standard": "^3.0.1",
+		"file-loader": "^3.0.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.6.0",
