--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"babel-loader": "^8.0.5",
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
+		"electron-reload": "^1.4.0",
 		"eslint-config-airbnb-standard": "^3.0.1",
 		"file-loader": "^3.0.1",
 		"html-loader": "^0.5.5",
