--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"rc-slider": "^8.6.11",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-split-pane": "^0.1.87"
+		"react-split-pane": "^0.1.87",
+		"react-table": "^6.10.0"
 	}
 }
