--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "main.js",
 	"scripts": {
-		"start": "webpack-dev-server --config ./webpack.config.js --mode development",
-		"electron": "webpack --config ./webpack.config.js && electron .",
+		"start": "webpack-dev-server --config ./webpack/dev.js",
+		"electron": "webpack --config ./webpack/prod.js && electron .",
 		"test": "echo \"No test specified\" && exit 0"
 	},
 	"keywords": [],
@@ -32,7 +32,8 @@
 		"url-loader": "^1.1.2",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.1",
-		"webpack-dev-server": "^3.3.1"
+		"webpack-dev-server": "^3.3.1",
+		"webpack-merge": "^4.2.1"
 	},
 	"dependencies": {
 		"electron": "^5.0.1",
