--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "musicion",
 	"version": "0.1.0",
-	"description": "",
+	"description": "Multi Platform Music Player",
 	"main": "main.js",
 	"scripts": {
 		"start": "webpack-dev-server --config ./webpack/dev.js",
 		"electron": "webpack --config ./webpack/prod.js && electron .",
-		"test": "echo \"No test specified\" && exit 0"
+		"test": "echo \"No test specified\" && exit 0",
+		"dist": "electron-builder"
 	},
 	"keywords": [],
 	"author": "Codefoxes",
@@ -20,6 +21,8 @@
 		"babel-loader": "^8.0.5",
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
+		"electron": "^5.0.2",
+		"electron-builder": "^20.41.0",
 		"electron-reload": "^1.4.0",
 		"eslint-config-airbnb-standard": "^3.0.1",
 		"file-loader": "^3.0.1",
@@ -36,7 +39,6 @@
 		"webpack-merge": "^4.2.1"
 	},
 	"dependencies": {
-		"electron": "^5.0.1",
 		"fsevents": "^2.0.7",
 		"graceful-fs": "^4.1.15",
 		"howler": "^2.1.2",
@@ -46,5 +48,28 @@
 		"react-dom": "^16.8.6",
 		"react-split-pane": "^0.1.87",
 		"react-table": "^6.10.0"
+	},
+	"build": {
+		"appId": "com.codefoxes.musicion",
+		"compression": "maximum",
+		"dmg": {
+			"contents": [
+				{
+					"x": 410,
+					"y": 150,
+					"type": "link",
+					"path": "/Applications"
+				},
+				{
+					"x": 130,
+					"y": 150,
+					"type": "file"
+				}
+			]
+		},
+		"linux": {
+			"target": "deb",
+			"maintainer": "dev@codefoxes.com"
+		}
 	}
 }
