--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,11 @@
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"react/destructuring-assignment": 0
+		"react/destructuring-assignment": 0,
+
+		// Todo: Make Musicion a11y compatible.
+		"jsx-a11y/no-static-element-interactions": 0,
+		"jsx-a11y/click-events-have-key-events": 0
 	},
 	"settings": {
 		"import/core-modules": [ "electron" ]
