--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"graceful-fs": "^4.1.15",
 		"howler": "^2.1.2",
 		"node-id3": "^0.1.7",
+		"prop-types": "^15.7.2",
 		"rc-slider": "^8.6.11",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
