--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
 
 		// Todo: Make Musicion a11y compatible.
 		"jsx-a11y/no-static-element-interactions": 0,
-		"jsx-a11y/click-events-have-key-events": 0
+		"jsx-a11y/click-events-have-key-events": 0,
+		"jsx-a11y/no-noninteractive-element-interactions": 0
 	},
 	"settings": {
 		"import/core-modules": [ "electron" ]
