--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,10 @@
 	},
 	"rules": {
 		"semi": [2, "never"],
-		"max-len": [2, { "code": 140 }],
+		"max-len": [2, { "code": 160 }],
 		"no-tabs": 0,
 		"indent": [2, "tab"],
+		"object-curly-newline": [2, { "ExportDeclaration": { "minProperties": 5 } }],
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
