--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"rc-slider": "^8.6.11",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-split": "^2.0.5",
 		"react-split-pane": "^0.1.87",
 		"react-table": "^6.10.0"
 	},
