--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"ed": "electron .",
 		"electron": "webpack --config ./webpack/prod.js && electron .",
 		"pcreate": "phonegap create phonegap --id 'com.codefoxes.musicion' --name 'musicion'",
-		"ps": "webpack --watch --config ./webpack/cordova-dev.js",
+		"ps": "rm -rf phonegap/www/* && webpack --watch --config ./webpack/cordova-dev.js",
 		"pd": "cd phonegap && phonegap serve",
 		"test": "echo \"No test specified\" && exit 0",
 		"dist": "electron-builder"
@@ -24,6 +24,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.5",
+		"copy-webpack-plugin": "^5.0.3",
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
 		"electron": "^5.0.2",
