--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"start": "webpack-dev-server --config ./webpack/browser-dev.js",
 		"es": "webpack-dev-server --config ./webpack/electron-dev.js",
 		"ed": "electron .",
+		"ebuild": "rm -rf renderer && webpack --config ./webpack/electron-prod.js",
+		"esubuild": "node ./build/soft-update.js",
 		"electron": "webpack --config ./webpack/prod.js && electron .",
 		"pcreate": "phonegap create phonegap --id 'com.codefoxes.musicion' --name 'musicion'",
 		"ps": "rm -rf phonegap/www/* && webpack --watch --config ./webpack/cordova-dev.js",
@@ -38,6 +40,7 @@
 		"node-sass": "^4.12.0",
 		"react-hot-loader": "^4.8.4",
 		"sass-loader": "^7.1.0",
+		"shelljs": "^0.8.3",
 		"url-loader": "^1.1.2",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.1",
