--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 		"semi": [2, "never"],
 		"max-len": [2, { "code": 160 }],
 		"no-tabs": 0,
-		"indent": [2, "tab"],
+		"indent": [2, "tab", { "SwitchCase": 1 }],
 		"object-curly-newline": [2, { "ExportDeclaration": { "minProperties": 5 } }],
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
