Squashed commits from firebase:     Firebase log version     Firebase setup

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"css-hot-loader": "^1.4.4",
 		"css-loader": "^2.1.1",
 		"dirsum": "^0.1.1",
+		"dotenv-webpack": "^1.7.0",
 		"electron": "^5.0.2",
 		"electron-builder": "^20.41.0",
 		"electron-reload": "^1.4.0",
@@ -49,6 +50,7 @@
 		"webpack-merge": "^4.2.1"
 	},
 	"dependencies": {
+		"firebase": "^6.2.4",
 		"fsevents": "^2.0.7",
 		"graceful-fs": "^4.1.15",
 		"prop-types": "^15.7.2",
@@ -71,7 +73,9 @@
 			{
 				"from": "electron/main/node_modules/",
 				"to": "electron/main/node_modules/",
-				"filter": ["**/*"]
+				"filter": [
+					"**/*"
+				]
 			}
 		],
 		"dmg": {
