Refactor frontend package & Build flow

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"ed": "electron .",
 		"ebuild": "rm -rf electron/renderer && webpack --config ./webpack/electron-prod.js",
 		"esubuild": "node ./build_scripts/soft_update.js",
-		"electron": "webpack --config ./webpack/prod.js && electron .",
 		"pcreate": "phonegap create phonegap --id 'com.codefoxes.musicion' --name 'musicion'",
 		"ps": "rm -rf phonegap/www/* && webpack --watch --config ./webpack/cordova-dev.js",
 		"pd": "cd phonegap && phonegap serve",
@@ -40,25 +39,16 @@
 		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.6.0",
 		"node-sass": "^4.12.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"react-hot-loader": "^4.8.4",
 		"sass-loader": "^7.1.0",
 		"shelljs": "^0.8.3",
+		"terser-webpack-plugin": "^1.3.0",
 		"url-loader": "^1.1.2",
 		"webpack": "^4.30.0",
 		"webpack-cli": "^3.3.1",
 		"webpack-dev-server": "^3.3.1",
 		"webpack-merge": "^4.2.1"
-	},
-	"dependencies": {
-		"firebase": "^6.2.4",
-		"fsevents": "^2.0.7",
-		"graceful-fs": "^4.1.15",
-		"prop-types": "^15.7.2",
-		"rc-slider": "^8.6.11",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-split-pane": "^0.1.87",
-		"react-table": "^6.10.0"
 	},
 	"build": {
 		"appId": "com.codefoxes.musicion",
@@ -69,7 +59,8 @@
 			"!**/dist/*",
 			"!**/phonegap/*",
 			"!**/src/*",
-			"!**/webpack/*",
+			"!**/webpack*",
+			"!**/.env",
 			{
 				"from": "electron/main/node_modules/",
 				"to": "electron/main/node_modules/",
