--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"es": "webpack-dev-server --config ./webpack/electron-dev.js",
 		"ed": "electron .",
 		"ebuild": "rm -rf electron/renderer && webpack --config ./webpack/electron-prod.js",
-		"esubuild": "node ./build_scripts/soft_update.js",
+		"esubuild": "npm run ebuild && node ./build_scripts/soft_update.js",
 		"pcreate": "phonegap create phonegap --id 'com.codefoxes.musicion' --name 'musicion'",
 		"ps": "rm -rf phonegap/www/* && webpack --watch --config ./webpack/cordova-dev.js",
 		"pd": "cd phonegap && phonegap serve",
-		"test": "echo \"No test specified\" && exit 0",
+		"test": "jest --config tests/jest.config.js --watch",
 		"dist": "electron-builder"
 	},
 	"keywords": [],
@@ -34,9 +34,11 @@
 		"electron-builder": "^20.41.0",
 		"electron-reload": "^1.4.0",
 		"eslint-config-airbnb-standard": "^3.0.1",
+		"eslint-plugin-jest": "^22.7.2",
 		"file-loader": "^3.0.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
+		"jest": "^24.8.0",
 		"mini-css-extract-plugin": "^0.6.0",
 		"node-sass": "^4.12.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -59,6 +61,7 @@
 			"!**/dist/*",
 			"!**/phonegap/*",
 			"!**/src/*",
+			"!**/tests/*",
 			"!**/webpack*",
 			"!**/.env",
 			{
