--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"pcreate": "phonegap create phonegap --id 'com.codefoxes.musicion' --name 'musicion'",
 		"ps": "rm -rf phonegap/www/* && webpack --watch --config ./webpack/cordova-dev.js",
 		"pd": "cd phonegap && phonegap serve",
-		"test": "jest --config tests/jest.config.js --watch",
+		"test": "NODE_ENV=test jest --config tests/jest.config.js --no-cache --verbose --watch",
+		"test:cov": "NODE_ENV=test jest --config tests/jest.config.js --no-cache --verbose --coverage",
 		"dist": "electron-builder"
 	},
 	"keywords": [],
@@ -23,7 +24,10 @@
 		"@babel/plugin-proposal-class-properties": "^7.4.4",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/preset-react": "^7.0.0",
+		"@testing-library/jest-dom": "^4.0.0",
+		"@testing-library/react": "^8.0.5",
 		"babel-eslint": "^10.0.1",
+		"babel-jest": "^24.8.0",
 		"babel-loader": "^8.0.5",
 		"copy-webpack-plugin": "^5.0.3",
 		"css-hot-loader": "^1.4.4",
