--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
 		"no-tabs": 0,
 		"indent": [2, "tab", { "SwitchCase": 1 }],
 		"object-curly-newline": [2, { "ExportDeclaration": { "minProperties": 5 } }],
+		"standard/no-callback-literal": 0,
 		"react/jsx-indent": [2, "tab"],
 		"react/jsx-indent-props": [2, "tab"],
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
