--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"html-webpack-plugin": "^3.2.0",
 		"jest": "^24.8.0",
 		"mini-css-extract-plugin": "^0.6.0",
+		"mock-fs": "^4.10.1",
 		"node-sass": "^4.12.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"react-hot-loader": "^4.8.4",
