--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"electron": "^5.0.2",
 		"electron-builder": "^20.41.0",
 		"electron-reload": "^1.4.0",
+		"enzyme": "^3.10.0",
+		"enzyme-adapter-react-16": "^1.14.0",
 		"eslint-config-airbnb-standard": "^3.0.1",
 		"eslint-plugin-jest": "^22.7.2",
 		"file-loader": "^3.0.1",
